--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     padding: 0;
     box-sizing: border-box;
 }
+
 /* Main Styling */
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -15,7 +16,9 @@ a {
     text-decoration: none;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     padding-bottom: 20px;
 }
 
@@ -76,26 +79,37 @@ p {
 
 .l-heading {
     font-size: 40px;
+    line-height: 1.2;
 }
 
 
 /* Padding */
-.py-1 { padding: 10px 0; }
-.py-2 { padding: 20px 0; }
-.py-3 { padding: 30px 0; }
+.py-1 {
+    padding: 10px 0;
+}
+
+.py-2 {
+    padding: 20px 0;
+}
+
+.py-3 {
+    padding: 30px 0;
+}
 
 
 /* Navbar */
 #navbar {
     background: #333;
-    color: #fff;;
+    color: #fff;
+    ;
     overflow: auto;
 }
+
 #navbar a {
     color: #fff;
 }
 
-#navbar h1 {
+#navbar .logo {
     float: left;
     padding-top: 20px;
 }
@@ -115,7 +129,7 @@ p {
     text-align: center;
 }
 
-#navbar ul li a:hover, 
+#navbar ul li a:hover,
 #navbar ul li a.current {
     background: #444;
     color: #f7c08a;
@@ -150,7 +164,7 @@ p {
 
 /* Home Info */
 #home-info {
-    height: 400px;
+    height: 450px;
 }
 
 #home-info .info-img {
@@ -164,7 +178,7 @@ p {
     float: right;
     width: 50%;
     text-align: center;
-    padding: 50px 30px;
+    padding: 100px 30px;
     overflow: hidden;
 }
 
@@ -207,7 +221,7 @@ p {
 
 /* Testimonials */
 #testimonials {
-    height: 600px;
+    height: 100%;
     background: url('/img/test-bg.jpg') no-repeat center center/cover;
     padding-top: 100px;
 }
@@ -242,7 +256,7 @@ p {
     margin-bottom: 5px;
 }
 
-#contact-form input, 
+#contact-form input,
 #contact-form textarea {
     width: 100%;
     padding: 10px;
@@ -253,7 +267,7 @@ p {
     height: 200px;
 }
 
-#contact-form input:focus, 
+#contact-form input:focus,
 #contact-form textarea:focus {
     outline: none;
     border-color: #f7c08a;
@@ -262,13 +276,8 @@ p {
 
 /* Footer */
 #main-footer {
-    text-align: center; 
-    background: #444; 
+    text-align: center;
+    background: #444;
     color: #fff;
     padding: 20px;
 }
-
-
-
-
-
