--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ p {
 /* Testimonials */
 #testimonials {
     height: 100%;
-    background: url('/img/test-bg.jpg') no-repeat center center/cover;
+    background: url('../img/test-bg.jpg') no-repeat center center/cover;
     padding-top: 100px;
 }
 
